Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8173955/MessageForClassTest.out
MessageForClassTest.java:8:8: compiler.err.class.public.should.be.in.file: kindname.class, MessageForClassTest_
1 error
